# nonrigid-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
assets/sample_dataset/single_object/: selected_pairs.json
assets/sample_dataset/single_object/sequence_000/scenario_000/: depth_00000.tiff
assets/sample_dataset/single_object/sequence_000_deformed_timestep_00003/scenario_000/: depth_00000.tiff
assets/sample_result/: deformation_3.txt
assets/sample_result/SIFT_2048/sample_dataset/: deformation_3.json
src/nonrigid_benchmark/: compute.py  evaluate.py  io.py  ransac.py  utils.py
src/nonrigid_benchmark/baselines/: alike.py  dalf.py  deal.py  dedode.py  freak.py  lightglue.py  orb.py  r2d2.py  sift.py  superglue.py  superpoint.py  tfeat.py  xfeat.py  xfeatstar.py
